reduce prom-statsd ttl

--- a/openstack/blackbox/charts/blackbox-tests-canary/templates/deployment.yaml
+++ b/openstack/blackbox/charts/blackbox-tests-canary/templates/deployment.yaml
@@ -906,7 +906,7 @@ spec:
           image: prom/statsd-exporter:v0.8.1
           imagePullPolicy: IfNotPresent
           args:
-            - --statsd.mapping-config=/etc/statsd/statsd-mapping-config.yaml
+            - --statsd.mapping-config=/etc/statsd/statsd-mapping.conf
           ports:
             - name: statsd
               containerPort: 9125
