--- a/openstack/blackbox/charts/blackbox-tests-canary/templates/statsd-exporter-configmap.yaml
+++ b/openstack/blackbox/charts/blackbox-tests-canary/templates/statsd-exporter-configmap.yaml
@@ -4,6 +4,6 @@ metadata:
   name: blackbox-tests-canary-statsd-mapping-config
 
 data:
-  statsd-mapping-config.yaml: |
+  statsd-mapping.conf: |
     defaults:
       ttl: {{ .Values.statsd.ttl }}
