[neutron] resource requests + anti affinity

--- a/openstack/neutron/templates/deployment-ucs-bm-ml2-agent.yaml
+++ b/openstack/neutron/templates/deployment-ucs-bm-ml2-agent.yaml
@@ -58,6 +58,13 @@ spec:
                   key: neutron.DSN.python
             - name: NAMESPACE
               value: {{ .Release.Namespace }}
+          resources:
+            requests:
+              cpu: "256m"
+              memory: "512Mi"
+            limits:
+              cpu: "500m"
+              memory: "600Mi"
           volumeMounts:
             - name: etcneutron
               mountPath: /etc/neutron
