--- a/openstack/neutron/templates/network-attachment-definition.yaml
+++ b/openstack/neutron/templates/network-attachment-definition.yaml
@@ -2,20 +2,15 @@
 apiVersion: "k8s.cni.cncf.io/v1"
 kind: NetworkAttachmentDefinition
 metadata:
-  name: bond-conf
+  name: cbr1-bridge
   annotations:
     "helm.sh/hook": crd-install
 spec:
   config: '{
       "cniVersion": "0.3.1",
-      "type": "macvlan",
-      "master": "bond1",
-      "mode": "bridge",
-      "ipam": {
-        "type": "static",
-        "addresses": [
-          { "address": "10.46.100.250/25" }
-        ]
-      }
+      "type": "bridge",
+      "name": "cbr1-bridge",
+      "bridge": "cbr1",
+      "ipam": { }
     }'
 {{- end }}
