--- a/openstack/neutron/templates/vct-nsxv3-agent-deployment.yaml
+++ b/openstack/neutron/templates/vct-nsxv3-agent-deployment.yaml
@@ -54,6 +54,13 @@ template: |
             value: neutron-nsxv3-agent-{= name =}
           - name: REQUESTS_CA_BUNDLE
             value: ""
+          resources:
+            requests:
+              cpu: "64m"
+              memory: "256Mi"
+            limit:
+              cpu: "128m"
+              memory: "512Mi"
           volumeMounts:
           - mountPath: /etc/neutron
             name: etcneutron
