--- a/openstack/neutron/templates/daemonset-metadata-agent.yaml
+++ b/openstack/neutron/templates/daemonset-metadata-agent.yaml
@@ -51,6 +51,13 @@ spec:
             initialDelaySeconds: 30
             periodSeconds: 30
             timeoutSeconds: 10
+          resources:
+            requests:
+              cpu: "250m"
+              memory: "256Mi"
+            limit:
+              cpu: "500m"
+              memory: "512Mi"
           volumeMounts:
             - name: metadata-proxy
               mountPath: /run/metadata_proxy
