Adjusted namespace for apic-exporters to infra-monitoring

--- a/openstack/infra-exporters/apic-exporters/templates/apic_exporters_configmap.yaml
+++ b/openstack/infra-exporters/apic-exporters/templates/apic_exporters_configmap.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: apic-exporters
-  namespace: monsoon3
+  namespace: infra-exporters
   labels:
     system: openstack
     service: metrics
