--- a/openstack/infra-exporters/apic-exporters/values.yaml
+++ b/openstack/infra-exporters/apic-exporters/values.yaml
@@ -3,7 +3,7 @@ apic_exporters:
   docker_repo: DEFINED-IN-REGION-CHART
   image_version: DEFINED-IN-REGION-CHART
   device_information:
-    hostname: DEFINED-IN-REGION-CHART
+    hosts: DEFINED-IN-REGION-CHART
     username: DEFINED-IN-REGION-CHART
     password: DEFINED-IN-REGION-CHART
     tenant_name: DEFINED-IN-REGION-CHART
