--- a/openstack/infra-exporters/apic-exporters/templates/apic_exporters_service.yaml
+++ b/openstack/infra-exporters/apic-exporters/templates/apic_exporters_service.yaml
@@ -5,7 +5,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: apic-exporters-service
-  namespace: monsoon3
+  namespace: infra-exporters
   labels:
     servcie: metrics
     system: openstack
