--- a/openstack/infra-exporters/apic-exporters/templates/apic_exporters_deployment.yaml
+++ b/openstack/infra-exporters/apic-exporters/templates/apic_exporters_deployment.yaml
@@ -4,7 +4,7 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: apic-exporters-deployment
-  namespace: infra-exporters
+  namespace: infra-monitoring
   labels:
     system: openstack
     service: metrics
