init 1000eyes-exporter helm chart

--- a/system/infra-monitoring/requirements.yaml
+++ b/system/infra-monitoring/requirements.yaml
@@ -59,3 +59,9 @@ dependencies:
     repository: file://vendor/arista-service-discovery
     version: 0.1.0
     condition: arista-exporter.enabled
+
+  - name: 1000eyes-exporter
+    alias: 1000eyes_exporter
+    repository: file://vendor/1000eyes-exporter
+    version: 0.1.0
+    condition: 1000eyes-exporter.enabled
