fix thousandeyes-exporter name

--- a/system/infra-monitoring/requirements.yaml
+++ b/system/infra-monitoring/requirements.yaml
@@ -60,8 +60,8 @@ dependencies:
     version: 0.1.0
     condition: arista-exporter.enabled
 
-  - name: 1000eyes-exporter
-    alias: 1000eyes_exporter
+  - name: thousandeyes-exporter
+    alias: thousandeyes_exporter
     repository: file://vendor/1000eyes-exporter
     version: 0.1.0
-    condition: 1000eyes-exporter.enabled
+    condition: thousandeyes-exporter.enabled
