Fixed apic-exporter service selector component

--- a/openstack/infra-exporters/apic-exporters/templates/apic_exporters_deployment.yaml
+++ b/openstack/infra-exporters/apic-exporters/templates/apic_exporters_deployment.yaml
@@ -3,7 +3,7 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: apic-exporters-deployment
+  name: apic-exporters
   namespace: infra-monitoring
   labels:
     system: openstack
