--- a/openstack/infra-exporters/apic-exporters/templates/apic_exporters_service.yaml
+++ b/openstack/infra-exporters/apic-exporters/templates/apic_exporters_service.yaml
@@ -4,7 +4,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: apic-exporters-service
+  name: apic-exporters
   namespace: infra-monitoring
   labels:
     servcie: metrics
@@ -25,7 +25,7 @@ metadata:
     {{- end }}
 spec:
   selector:
-    component: apic-exporters-deployment
+    component: apic-exporters
   ports:
   - name: metrics
     port: {{ $global_values.apic_exporters.prometheus_port }}
