Fix typo for apic-exporters prometheus scrape

--- a/openstack/infra-exporters/apic-exporters/templates/apic_exporters_service.yaml
+++ b/openstack/infra-exporters/apic-exporters/templates/apic_exporters_service.yaml
@@ -20,7 +20,7 @@ metadata:
     {{- if eq $collector "prometheus" }}
     prometheus.io/scrape: "true"
     prometheus.io/port: {{ $global_values.apic_exporters.prometheus_port | quote}}
-    prometheus.io/target: "openstack"
+    prometheus.io/targets: "openstack"
     {{- end }}
     {{- end }}
     {{- end }}
