--- a/system/prometheus-server/templates/servicemonitors/endpoint-sd.yaml
+++ b/system/prometheus-server/templates/servicemonitors/endpoint-sd.yaml
@@ -25,6 +25,7 @@ spec:
       interval: 60s
       scrapeTimeout: 55s
       scheme: http
+      honorLabels: true
       relabelings:
         - action: keep
           sourceLabels:
@@ -70,6 +71,7 @@ spec:
       interval: 60s
       scrapeTimeout: 55s
       scheme: http
+      honorLabels: true
       relabelings:
         - action: keep
           sourceLabels:
