[keystone] added support for disabling ldap connection pooling

--- a/openstack/domain-seeds/templates/domain-cc3test-seed.yaml
+++ b/openstack/domain-seeds/templates/domain-cc3test-seed.yaml
@@ -171,9 +171,10 @@ spec:
         group_desc_attribute: description
         group_member_attribute: member
         group_tree_dn: OU=CC3TEST,OU=OSDomains,OU=CCloud,{{ .Values.ldapSuffix }}
-        use_pool: true
+        use_pool: {{ .Values.ldapUsePool | default "true" }}
         pool_size: 10
         pool_connection_lifetime: 60
-        use_auth_pool: true
+        use_auth_pool: {{ .Values.ldapUseAuthPool | default "true" }}
         auth_pool_size: 100
         auth_pool_connection_lifetime: 60
+        debug_level: {{ .Values.ldapDebugLevel }}
