--- a/openstack/domain-seeds/values.yaml
+++ b/openstack/domain-seeds/values.yaml
@@ -12,6 +12,9 @@ ldapUser: CN=monsoon-service,CN=Users,DC=ad,DC=global,DC=cloud,DC=sap
 ldapPassword: ""
 ldapSuffix: DC=ad,DC=global,DC=cloud,DC=sap
 ldapDriver: cc_ldap
+ldapDebugLevel: 0
+ldapUsePool: true
+ldapUseAuthPool: true
 
 # default domain - service user credentials
 concourseServicePassword: DEFINE_IN_REGION_VALUES
