--- a/openstack/domain-seeds/templates/domain-monsoon3-seed.yaml
+++ b/openstack/domain-seeds/templates/domain-monsoon3-seed.yaml
@@ -173,9 +173,9 @@ spec:
         group_name_attribute: name
         group_desc_attribute: description
         group_member_attribute: member
-        use_pool: {{ .Values.ldapUsePool | default "true" }}
+        use_pool: {{ .Values.ldapUsePool }}
         pool_size: 100
-        use_auth_pool: {{ .Values.ldapUseAuthPool | default "true" }}
+        use_auth_pool: {{ .Values.ldapUseAuthPool }}
         auth_pool_size: 100
         auth_pool_connection_lifetime: 60
         debug_level: {{ .Values.ldapDebugLevel }}
