add admin cluster

--- a/global/prometheus-kubernetes/values.yaml
+++ b/global/prometheus-kubernetes/values.yaml
@@ -47,6 +47,7 @@ alerts:
 
 # List of regions to which the prometheus-kubernetes is deployed.
 regionList:
+  - "admin"
   - "ap-au-1"
   - "ap-cn-1"
   - "ap-ae-1"
@@ -63,8 +64,6 @@ regionList:
   - "na-us-2"
   - "na-us-3"
   - "qa-de-1"
-  # Admin cluster not on k8s 1.8, so no operated Prometheus.
-  # - "admin"
 
 # Regional Prometheis are only accessible after presenting a valid SSO certificate.
 authentication:
