fix column names

--- a/openstack/castellum/values.yaml
+++ b/openstack/castellum/values.yaml
@@ -22,7 +22,7 @@ pgmetrics:
   customMetrics:
     castellum_asset_count:
       query: >
-        SELECT r.asset_type AS asset, COUNT(*)
+        SELECT r.asset_type AS asset, COUNT(*) AS gauge
           FROM assets a JOIN resources r ON r.id = a.resource_id
          GROUP BY r.asset_type
       metrics:
@@ -34,7 +34,7 @@ pgmetrics:
             description: "Total number of assets that are managed by Castellum"
     castellum_resource_count:
       query: >
-        SELECT asset_type AS asset, COUNT(*)
+        SELECT asset_type AS asset, COUNT(*) AS gauge
           FROM resources
          GROUP BY asset_type
       metrics:
