adjust SQL queries such that metrics are always generated for all asset types
Even if there are no resources or assets at all to count.

--- a/openstack/castellum/values.yaml
+++ b/openstack/castellum/values.yaml
@@ -20,11 +20,17 @@ pgmetrics:
   db_name: castellum
 
   customMetrics:
+    # When adding new asset managers, add the corresponding to the WITH subquery as follows:
+    #   SELECT 'nfs-shares' UNION SELECT 'other-thing' UNION ...
+    # TODO: have Castellum generate this asset_types table
     castellum_asset_count:
       query: >
-        SELECT r.asset_type AS asset, COUNT(*) AS gauge
-          FROM assets a JOIN resources r ON r.id = a.resource_id
-         GROUP BY r.asset_type
+        WITH asset_types(type) AS (SELECT 'nfs-shares')
+        SELECT t.type AS asset, COUNT(a.id) AS gauge
+          FROM asset_types t
+          LEFT OUTER JOIN resources r ON r.asset_type = t.type
+          LEFT OUTER JOIN assets a ON a.resource_id = r.id
+         GROUP BY t.type
       metrics:
         - asset:
             usage: "LABEL"
@@ -34,9 +40,11 @@ pgmetrics:
             description: "Total number of assets that are managed by Castellum"
     castellum_resource_count:
       query: >
-        SELECT asset_type AS asset, COUNT(*) AS gauge
-          FROM resources
-         GROUP BY asset_type
+        WITH asset_types(type) AS (SELECT 'nfs-shares')
+        SELECT t.type AS asset, COUNT(r.id) AS gauge
+          FROM asset_types t
+          LEFT OUTER JOIN resources r ON r.asset_type = t.type
+         GROUP BY t.type
       metrics:
         - asset:
             usage: "LABEL"
