[keystone] don't insist on valid LDAP certificates (for testing)

--- a/openstack/keystone/templates/deployment-api.yaml
+++ b/openstack/keystone/templates/deployment-api.yaml
@@ -85,6 +85,8 @@ spec:
 {{- end }}
         - name: DEPENDENCY_SERVICE
           value: {{ .Release.Name }}-postgresql,{{ .Release.Name }}-memcached
+        - name: LDAPTLS_REQCERT
+          value: "never"
         - name: COMMAND
           value: "true"
       containers:
