include all tests; add comments

--- a/ci/config.yaml
+++ b/ci/config.yaml
@@ -1,17 +1,26 @@
+# Detect changes to a helm chart by comparing with this remote/branch.
 remote: origin
 target-branch: master
 
+# What to check.
+validate-maintainers: true
+validate-chart-schema: true
+validate-yaml: true
+check-version-increment: true
+
+# Find helm charts in these directories.
 chart-dirs:
   - common
   - global
   - openstack
   - system
 
+# Don't look here.
 excluded-charts:
   - ci
 
+# Adds remote chart repositories.
+# TODO: Switch to charts.global.cloud.sap once configured.
 chart-repos:
   - stable=https://kubernetes-charts.storage.googleapis.com
   - sapcc=https://charts.eu-de-2.cloud.sap
-
-helm-extra-args: --timeout 500
