--- a/global/chartmuseum/Chart.yaml
+++ b/global/chartmuseum/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 appVersion: "1.0"
-description: Helm chart repository
+description: Helm chart repository foobar
 name: chartmuseum
 version: 0.1.1
