--- a/openstack/manila/templates/seeds.yaml
+++ b/openstack/manila/templates/seeds.yaml
@@ -488,5 +488,24 @@ spec:
       - domain: wbs
         role: sharedfilesystem_viewer
         inherited: true
+
+  share_types:
+  - name: default
+    is_public: true
+    specs:
+      driver_handles_share_servers: true
+      snapshot_support: true
+    extra_specs:
+      qos : "True"
+      compression: "<is> True"
+      dedupe: "<is> True"
+      netapp:hide_snapdir: "True"
+      netapp:snapshot_policy : "none"
+      netapp:split_clone_on_create : "True"
+      netapp:thin_provisioned : "True"
+      netapp:maxiopspergib : "3"
+      create_share_from_snapshot_support: "True"
+      share_backend_name : "netapp-multi"
+      revert_to_snapshot_support : "True"
 {{- end }}
 {{- end }}
