--- a/ci/config.yaml
+++ b/ci/config.yaml
@@ -20,7 +20,7 @@ excluded-charts:
   - ci
 
 # Adds remote chart repositories.
-# TODO: Switch to charts.global.cloud.sap once configured.
+# TODO: Switch to sapcc=https://charts.global.cloud.sap once configured.
 chart-repos:
   - stable=https://kubernetes-charts.storage.googleapis.com
   - sapcc=https://charts.eu-de-2.cloud.sap
