--- a/global/prometheus-infra/values.yaml
+++ b/global/prometheus-infra/values.yaml
@@ -39,9 +39,23 @@ prometheus-infra-global:
 alerts:
   prometheus: infra-global
 
-# List of regions to which the prometheus-openstack is deployed.
+# List of regions to which the prometheus-infra is deployed.
 regionList:
   - "qa-de-1"
+  - "eu-de-1"
+  - "eu-de-2"
+  - "eu-nl-1"
+  - "eu-ru-1"
+  - "la-br-1"
+  - "na-ca-1"
+  - "na-us-1"
+  - "na-us-3"
+  - "ap-ae-1"
+  - "ap-au-1"
+  - "ap-cn-1"
+  - "ap-jp-1"
+  - "ap-jp-2"
+  - "ap-sa-1"
 
 # Regional Prometheis are only accessible after presenting a valid SSO certificate.
 authentication:
