--- a/system/kube-monitoring/charts/kube-rules/templates/alerts.yaml
+++ b/system/kube-monitoring/charts/kube-rules/templates/alerts.yaml
@@ -1,7 +1,7 @@
 {{- $root := . -}}
 {{- $values := .Values -}}
 {{- range $path, $bytes := .Files.Glob "alerts/*.alerts.tpl" }}
-{{- if not (has (base $path | trimSuffix ".alerts" ) $values.disableAlerts) }}
+{{- if not (has (base $path | trimSuffix ".alerts.tpl" ) $values.disableAlerts) }}
 apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 
