fix regex in pod, svc sd

--- a/system/prometheus-server/templates/podmonitors/pod-sd.yaml
+++ b/system/prometheus-server/templates/podmonitors/pod-sd.yaml
@@ -48,7 +48,7 @@ spec:
             - __address__
             - __meta_kubernetes_pod_annotation_prometheus_io_port
           targetLabel: __address__
-          regex: '([^:]+)(?::\d+);(\d+)'
+          regex: '([^:]+)(?::\d+)?;(\d+)'
           replacement: ${1}:${2}
         - action: labelmap
           regex: '__meta_kubernetes_pod_label_(.+)'
@@ -89,7 +89,7 @@ spec:
             - __address__
             - __meta_kubernetes_pod_annotation_prometheus_io_port_1
           targetLabel: __address__
-          regex: '([^:]+)(?::\d+);(\d+)'
+          regex: '([^:]+)(?::\d+)?;(\d+)'
           replacement: ${1}:${2}
         - action: labelmap
           regex: '__meta_kubernetes_pod_label_(.+)'
