--- a/system/prometheus-server/templates/servicemonitors/endpoint-sd.yaml
+++ b/system/prometheus-server/templates/servicemonitors/endpoint-sd.yaml
@@ -53,7 +53,7 @@ spec:
             - __address__
             - __meta_kubernetes_service_annotation_prometheus_io_port
           targetLabel: __address__
-          regex: '([^:]+)(?::\d+);(\d+)'
+          regex: '([^:]+)(?::\d+)?;(\d+)'
           replacement: $1:$2
         - action: labelmap
           regex: '__meta_kubernetes_service_label_(.+)'
@@ -103,7 +103,7 @@ spec:
             - __address__
             - __meta_kubernetes_service_annotation_prometheus_io_port_1
           targetLabel: __address__
-          regex: '([^:]+)(?::\d+);(\d+)'
+          regex: '([^:]+)(?::\d+)?;(\d+)'
           replacement: $1:$2
         - action: labelmap
           regex: '__meta_kubernetes_service_label_(.+)'
