--- a/system/prometheus-server/Chart.yaml
+++ b/system/prometheus-server/Chart.yaml
@@ -1,3 +1,7 @@
 description: Prometheus via operator.
 name: prometheus-server
-version: 1.1.16
+version: 1.1.17
+appVersion: v2.10.0
+icon: https://raw.githubusercontent.com/prometheus/prometheus.github.io/master/assets/prometheus_logo-cb55bb5c346.png
+maintainers:
+  - name: auhlig
