[cinder] Increase postgresql max_connection
With the three pgbouncers taking each a maximum of 50 connections, we
need more than the default maximum of 50 connections in postgresql.

--- a/openstack/cinder/values.yaml
+++ b/openstack/cinder/values.yaml
@@ -147,6 +147,7 @@ postgresql:
   # postgresPassword:
   dbInit: cinder-db-init
   dbMaintain: cinder-db-maintain
+  max_connections: 150
   pgbouncer:
     enabled: true
   persistence:
