--- a/system/velero/templates/deployment.yaml
+++ b/system/velero/templates/deployment.yaml
@@ -1,6 +1,10 @@
 {{- if .Values.configuration.provider -}}
 {{- $provider := .Values.configuration.provider -}}
+{{- if .Capabilities.APIVersions.Has "apps/v1" }}
 apiVersion: apps/v1
+{{- else  }}
+apiVersion: apps/v1beta2
+{{- end }}
 kind: Deployment
 metadata:
   name: {{ include "velero.fullname" . }}
