relax chart tests even more (for now)

--- a/ci/config.yaml
+++ b/ci/config.yaml
@@ -3,10 +3,10 @@ remote: origin
 target-branch: master
 
 # What to check.
-validate-maintainers: true
 validate-chart-schema: true
 validate-yaml: true
-check-version-increment: true
+validate-maintainers: false
+check-version-increment: false
 
 # Find helm charts in these directories.
 chart-dirs:
