make linter happy

--- a/system/kube-system/values.yaml
+++ b/system/kube-system/values.yaml
@@ -108,7 +108,7 @@ nginx-ingress:
                 operator: In
                 values:
                 - app: nginx-ingress
-                key: component
+              - key: component
                 operator: In
                 values:
                 - controller
@@ -160,7 +160,7 @@ nginx-ingress:
                 operator: In
                 values:
                 - app: nginx-ingress
-                key: component
+              - key: component
                 operator: In
                 values:
                 - default-backend
