--- a/system/kube-monitoring/Chart.yaml
+++ b/system/kube-monitoring/Chart.yaml
@@ -1,3 +1,3 @@
-description: Kubernetes Control Plane Monitoring and Metrics Collection 
-name: kube-monitoring 
+description: Kubernetes Control Plane Monitoring and Metrics Collection.
+name: kube-monitoring
 version: 1.0.0
