valid helm chart

--- a/system/kube-system/charts/disco/Chart.yaml
+++ b/system/kube-system/charts/disco/Chart.yaml
@@ -1,3 +1,5 @@
 description: The DISCO (Designate IngresS Cname Operator) creates CNAMEs based on an ingress spec in OpenStack Designate.
 name: disco
-version: 0.1.0
+version: 1.0.0
+maintainers:
+  - name: auhlig
