--- a/system/kube-system/charts/disco/values.yaml
+++ b/system/kube-system/charts/disco/values.yaml
@@ -22,14 +22,14 @@ recordsetTTL: 1800
 ingressAnnotation: "disco"
 
 # Record which should be used. e.g.: 'ingress.domain.tld.' .
-record: #DEFINED-IN-SECRETS
+record:
 
 # Enable the OpenStack seed for the service user described in the openstack section below.
 seed:
   enabled: false
 
 # Credentials of the service user who creates the recordsets in OpenStack Designate.
-openstack:
+openstack: {}
   # authURL:            DEFINED-IN-SECRETS
   # regionName:         DEFINED-IN-SECRETS
   # username:           DEFINED-IN-SECRETS
