--- a/system/kube-system/charts/vice-president/Chart.yaml
+++ b/system/kube-system/charts/vice-president/Chart.yaml
@@ -1,4 +1,6 @@
 apiVersion: v1
-description: Automated certificate management by a kubernetes operator using the Symantec VICE API
+description: Automated certificate management by a kubernetes operator using the Symantec VICE API.
 name: vice-president
-version: 1.0.2
+version: 1.0.3
+maintainers:
+  - name: auhlig
