make chart tests happy

--- a/system/kube-monitoring/charts/prometheus-frontend/values.yaml
+++ b/system/kube-monitoring/charts/prometheus-frontend/values.yaml
@@ -1,3 +1,21 @@
+global:
+  region: DEFINED-AS-VALUE
+  domain: DEFINED-AS-VALUE
+
+  clusterType: controlplane
+
+  prometheus_deploy:
+    enabled: true
+
+  prometheus:
+    image: prom/prometheus
+    tag: v2.8.0
+
+  configmap_reload:
+    image:
+      repository: jimmidyson/configmap-reload
+      tag: v0.2.2
+
 prometheus:
   image: prom/prometheus
   tag: v2.8.0
