Added cpu resources for apic-exporters

--- a/openstack/infra-exporters/apic-exporters/templates/apic_exporters_deployment.yaml
+++ b/openstack/infra-exporters/apic-exporters/templates/apic_exporters_deployment.yaml
@@ -39,8 +39,10 @@ spec:
           resources:
             requests:
               memory: {{ .Values.apic_exporters.resources.requests.memory | quote }}
+              cpu: {{ .Values.apic_exporters.resources.requests.cpu | quote }}
             limits:
               memory: {{ .Values.apic_exporters.resources.limits.memory | quote }}
+              cpu: {{ .Values.apic_exporters.resources.limits.cpu | quote }}
           {{- end }}
           volumeMounts:
             - mountPath: /apic-exporters-etc
