Added default resource values for apic-exporters

--- a/openstack/infra-exporters/apic-exporters/values.yaml
+++ b/openstack/infra-exporters/apic-exporters/values.yaml
@@ -12,6 +12,14 @@ apic_exporters:
           https: ''
           no: '*'
     log_level: INFO
+  resources:
+    enabled: True
+    requests:
+      memory: 50Mi
+      cpu: 3m
+    limits:
+      memory: 75Mi
+      cpu: 10m
   exporter_types:
     - name: apichealth
       enabled: True
