--- a/openstack/nova/templates/api-service.yaml
+++ b/openstack/nova/templates/api-service.yaml
@@ -10,8 +10,8 @@ metadata:
   annotations:
     prometheus.io/scrape: "true"
     maia.io/scrape: "true"
-    prometheus.io/port: "{{.Values.portMetrics}}"
-    prometheus.io/targets: "{{ required ".Values.alerts.prometheus missing" .Values.alerts.prometheus }}"
+    prometheus.io/port: {{ required ".Values.portMetrics missing" .Values.portMetrics | quote }}
+    prometheus.io/targets: {{ required ".Values.alerts.prometheus missing" .Values.alerts.prometheus | quote }}
 
 spec:
   selector:
