move prometheus alerts to CRD

--- a/openstack/designate/values.yaml
+++ b/openstack/designate/values.yaml
@@ -207,3 +207,9 @@ rabbitmq_notifications:
 # openstack-watcher-middleware
 watcher:
   enabled: true
+
+# Deploy Designate Prometheus alerts.
+alerts:
+  enabled: true
+  # Name of the Prometheus to which the alerts should be assigned to.
+  prometheus: openstack
