--- a/openstack/designate/templates/api-service.yaml
+++ b/openstack/designate/templates/api-service.yaml
@@ -10,7 +10,8 @@ metadata:
     component: api
   annotations:
     prometheus.io/scrape: "true"
-    prometheus.io/port: "{{.Values.global.designate_metrics_port}}"
+    prometheus.io/port: {{ required ".Values.global.designate_metrics_port missing" .Values.global.designate_metrics_port | quote }}
+    prometheus.io/targets: {{ required ".Values.alerts.prometheus missing" .Values.alerts.prometheus | quote }}
 spec:
   selector:
     app: designate-api
