--- a/openstack/swift/etc/sapcc-ratelimit.yaml
+++ b/openstack/swift/etc/sapcc-ratelimit.yaml
@@ -8,7 +8,7 @@ ratelimit_response:
 blacklist_response:
   status: 497 Blacklisted
   status_code: 497
-  body: "You have been blacklisted. Please contact and administrator."
+  body: "Your account has been blacklisted"
 
 # Group multiple CADF actions to one rate limit action.
 groups:
@@ -16,17 +16,13 @@ groups:
     - update
     - delete
 
-  read:
-    - read
-    - read/list
-
 rates:
   # Global rate limits are counted across all projects and
   # are meant to protect the backend from being overloaded.
   global:
     account/container:
       - action: write
-        limit: 10000r/s
+        limit: 500r/s
 
   # Default rate limits apply to each project.
   # Rate limits specific to a project can only be set via Limes.
@@ -36,7 +32,7 @@ rates:
         limit: 10r/s
 
     account/container:
-      - action: read
+      - action: read/list
         limit: 100r/s
 
       - action: write
