adds elektra alerts

--- a/openstack/elektra/values.yaml
+++ b/openstack/elektra/values.yaml
@@ -38,3 +38,9 @@ ingress:
 #  ca: <your sso ca>
 tempest:
   enabled: false
+
+# Deploy Elektra Prometheus alerts.
+alerts:
+  enabled: true
+  # Name of the Prometheus to which the alerts should be assigned to.
+  prometheus: openstack
