--- a/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
+++ b/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
@@ -194,6 +194,7 @@ data:
           - '{__name__=~"^vcenter_SR17629377811$"}'
           - '{__name__=~"^vcenter_dvswitch_out_of_memory$"}'
           - '{__name__=~"^vcenter_SR17595168510$"}'
+          - '{__name__=~"^velero_.+"}'
           - '{__name__=~"^webhook_.+"}'
           - '{__name__=~"^admission|daemonset|deployment|disruption|endpoint|job|namespace|petset|replicaset|serviceaccount.+"}'
           - '{__name__=~"^ns_exporter.+"}'
