--- a/openstack/nannies/templates/vcenter-nanny-service.yaml
+++ b/openstack/nannies/templates/vcenter-nanny-service.yaml
@@ -17,6 +17,7 @@ template: |{{`
     annotations:
       prometheus.io/scrape: "true"
       prometheus.io/port: "9456"
+      prometheus.io/targets: "openstack"
   spec:
     selector:
       component: vcenter-nanny-{{ name }}
