--- a/openstack/nannies/values.yaml
+++ b/openstack/nannies/values.yaml
@@ -188,3 +188,9 @@ manila_nanny:
     dry_run: true
   netapp:
     interval: 240
+
+# Deploy Nanny Prometheus alerts.
+alerts:
+  enabled: true
+  # Name of the Prometheus to which the alerts should be assigned to.
+  prometheus: openstack
