--- a/openstack/nannies/templates/nova-nanny-service.yaml
+++ b/openstack/nannies/templates/nova-nanny-service.yaml
@@ -11,6 +11,7 @@ metadata:
   annotations:
     prometheus.io/scrape: "true"
     prometheus.io/port: "9456"
+    prometheus.io/targets: {{ required ".Values.alerts.prometheus missing" .Values.alerts.prometheus | quote }}
 spec:
   selector:
     component: nova-nanny
