Add velero prometheus alert CRD

--- a/system/velero/values.yaml
+++ b/system/velero/values.yaml
@@ -43,6 +43,7 @@ metrics:
     prometheus.io/scrape: "true"
     prometheus.io/port: "8085"
     prometheus.io/path: "/metrics"
+    prometheus.io/targets: "kubernetes"
 
   serviceMonitor:
     enabled: false
@@ -172,3 +173,7 @@ schedules: {}
 ##
 ## End of additional Velero resource settings.
 ##
+
+alerts:
+  enabled: false
+  prometheus: kubernetes
