--- a/openstack/neutron/templates/deployment-secgroup-entanglement-exporter.yaml
+++ b/openstack/neutron/templates/deployment-secgroup-entanglement-exporter.yaml
@@ -23,6 +23,7 @@ spec:
       annotations:
         prometheus.io/scrape: "true"
         prometheus.io/port: "9102"
+        prometheus.io/targets: {{ required ".Values.alerts.prometheus missing" .Values.alerts.prometheus | quote }}
     spec:
       containers:
         - name: exporter
