--- a/openstack/neutron/values.yaml
+++ b/openstack/neutron/values.yaml
@@ -375,3 +375,9 @@ nanny:
 
 unittest:
   enabled: false
+
+# Deploy Neutron Prometheus alerts.
+alerts:
+  enabled: true
+  # Name of the Prometheus to which the alerts should be assigned to.
+  prometheus: openstack
