--- a/openstack/arc/values.yaml
+++ b/openstack/arc/values.yaml
@@ -58,3 +58,16 @@ postgresql:
               usage: LABEL
           - os:
               usage: LABEL
+
+  alerts:
+    prometheus: openstack
+
+mosquitto:
+  alerts:
+    prometheus: openstack
+
+# Deploy Arc Prometheus alerts.
+alerts:
+  enabled: true
+  # Name of the Prometheus to which the alerts should be assigned to.
+  prometheus: openstack
