--- a/openstack/lyra/values.yaml
+++ b/openstack/lyra/values.yaml
@@ -46,3 +46,13 @@ omnitruck:
     pullPolicy: IfNotPresent
   internalPort: 8080
   #host:
+
+postgresql:
+  alerts:
+    prometheus: openstack
+
+# Deploy Lyra Prometheus alerts.
+alerts:
+  enabled: true
+  # Name of the Prometheus to which the alerts should be assigned to.
+  prometheus: openstack
