--- a/openstack/maia/templates/jumpserver-deployment.yaml
+++ b/openstack/maia/templates/jumpserver-deployment.yaml
@@ -16,6 +16,7 @@ spec:
       annotations:
         prometheus.io/scrape: "true"
         prometheus.io/port: {{ .Values.jumpserver.port_number | quote }}
+        prometheus.io/targets: {{ required ".Values.alerts.prometheus missing" .Values.alerts.prometheus | quote }}
     spec:
       containers:
          - name: jumpserver-exporter
