--- a/openstack/maia/values.yaml
+++ b/openstack/maia/values.yaml
@@ -127,3 +127,9 @@ jumpserver:
       tag: 1.3
 #   radius_secret: DEFINED-IN-REGION-SECRETS
    port_number: 9150
+
+# Deploy Maia Prometheus alerts.
+alerts:
+  enabled: true
+  # Name of the Prometheus to which the alerts should be assigned to.
+  prometheus: openstack
