--- a/global/concourse/values.yaml
+++ b/global/concourse/values.yaml
@@ -142,3 +142,9 @@ cleanup:
   # worker_prefix:
   # enable_volume_cleanup: false
   # volume_prefix:
+
+# Deploy Concourse Prometheus alerts.
+alerts:
+  enabled: true
+  # Name of the Prometheus to which the alerts should be assigned to.
+  prometheus: kubernetes
