no persistence for ratelimit redis

--- a/openstack/swift/values.yaml
+++ b/openstack/swift/values.yaml
@@ -164,17 +164,13 @@ sapcc-ratelimit-redis:
   cluster:
     enabled: false
 
-  # Minimal possible PV.
+  # No persistence. Just memory.
   master:
     persistence:
-      size: 1Gi
+      enabled: false
 
   # No password required for redis.
   usePassword: false
-
-  # Enable init container that changes volume permissions in the registry.
-  volumePermissions:
-    enabled: true
 
   # Prometheus metrics via oliver006/redis_exporter sidecar.
   metrics:
