Added new flavor with 150GB root disk requested by consulting team. Flavor is created as private.

--- a/openstack/sap-seeds/templates/flavor-seed.yaml
+++ b/openstack/sap-seeds/templates/flavor-seed.yaml
@@ -159,6 +159,15 @@ spec:
     extra_specs:
       "vmware:hv_enabled": "True"
       "hw_video:ram_max_mb": "16"
+  - name: "m5.xlarge2hdd"
+    id: "210"
+    vcpus: "4"
+    ram: "16368"
+    disk: "150"
+    is_public: false
+    extra_specs:
+      "vmware:hv_enabled": "True"
+      "hw_video:ram_max_mb": "16"
   - name: "m5.16xlarge"
     id: "220"
     vcpus: "64"
@@ -186,15 +195,6 @@ spec:
     extra_specs:
       "vmware:hv_enabled": "True"
       "hw_video:ram_max_mb": "16"
-  - name: "m5.96xlarge"
-    id: "270"
-    vcpus: "128"
-    ram: "1468416"
-    disk: "64"
-    is_public: false
-    extra_specs:
-      "vmware:hv_enabled": "True"
-      "hw_video:ram_max_mb": "16"
   - name: "x1.32xlarge"
     id: "250"
     vcpus: "128"
@@ -208,6 +208,15 @@ spec:
     id: "260"
     vcpus: "64"
     ram: "1992704"
+    disk: "64"
+    is_public: false
+    extra_specs:
+      "vmware:hv_enabled": "True"
+      "hw_video:ram_max_mb": "16"
+  - name: "m5.96xlarge"
+    id: "270"
+    vcpus: "128"
+    ram: "1468416"
     disk: "64"
     is_public: false
     extra_specs:
