Fix kube-system values

--- a/system/kube-system/values.yaml
+++ b/system/kube-system/values.yaml
@@ -159,7 +159,7 @@ nginx-ingress:
               - key: app
                 operator: In
                 values:
-                - app: nginx-ingress
+                - nginx-ingress
               - key: component
                 operator: In
                 values:
