--- a/openstack/neutron/values.yaml
+++ b/openstack/neutron/values.yaml
@@ -275,17 +275,20 @@ pgmetrics:
             usage: "GAUGE"
             description: "Estimate on number of filter rules"
     openstack_neutron_monitor_agents:
-      query: "SELECT host, agent_type, EXTRACT(EPOCH FROM (now() - heartbeat_timestamp)) as heartbeat_seconds FROM agents WHERE admin_state_up"
+      query: "SELECT host, agent_type, load, EXTRACT(EPOCH FROM (now() - heartbeat_timestamp)) as heartbeat_seconds FROM agents WHERE admin_state_up"
       metrics:
-      - host:
-          usage: "LABEL"
-          description: "Name of the agents host"
-      - agent_type:
-          usage: "LABEL"
-          description: "Type of the agent"
-      - heartbeat_seconds:
-          usage: "GAUGE"
-          description: "Seconds since the last heartbeat"
+        - host:
+            usage: "LABEL"
+            description: "Name of the agents host"
+        - agent_type:
+            usage: "LABEL"
+            description: "Type of the agent"
+        - heartbeat_seconds:
+            usage: "GAUGE"
+            description: "Seconds since the last heartbeat"
+        - load:
+            usage: "GAUGE"
+            description: "Load of the agent"
 
 postgresql:
   custom_repository: true
