fix kks alert routing

--- a/global/prometheus-alertmanager/templates/config.yaml
+++ b/global/prometheus-alertmanager/templates/config.yaml
@@ -75,14 +75,14 @@ data:
       # owner: Michael Schmidt / Fabian Ruff
       # critical channel has the action buttons
       - receiver: slack_kks_default
-        continue: true
+        continue: false
         match_re:
           tier: kks
           severity: warning|info
           region: admin|ap-ae-1|ap-au-1|ap-cn-1|ap-jp-1|ap-jp-2|ap-sa-1|eu-de-1|eu-de-2|eu-nl-1|eu-ru-1|la-br-1|na-ca-1|na-us-1|na-us-2|na-us-3
       
       - receiver: slack_kks_critical
-        continue: true
+        continue: false
         match_re:
           tier: kks
           severity: critical
