**DO NOT MERGE** test relaxed helm chart validation

--- a/openstack/prometheus-openstack/templates/openstack-additional-scrape-config.yaml
+++ b/openstack/prometheus-openstack/templates/openstack-additional-scrape-config.yaml
@@ -5,6 +5,7 @@ metadata:
   name: openstack-additional-scrape-config
   labels:
     prometheus: openstack
+    foo: bar
 
 data:
   scrape-config.yaml: {{ include (print $.Template.BasePath  "/_openstack-prometheus.yaml.tpl") . | b64enc }}
