[alert-manager]: enable CORS

--- a/global/prometheus-alertmanager/templates/ingress.yaml
+++ b/global/prometheus-alertmanager/templates/ingress.yaml
@@ -4,6 +4,11 @@ kind: Ingress
 metadata:
   name: prometheus-alertmanager
   annotations:
+    ingress.kubernetes.io/enable-cors: "true"
+    ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
+    ingress.kubernetes.io/cors-allow-origin: "https://supernova.eu-nl-1.cloud.sap/"
+    ingress.kubernetes.io/cors-allow-credentials: "true"
+
     vice-president: {{ default false .Values.vice_president | quote }}
     disco: {{ default false .Values.disco | quote }}
 
