--- a/global/supernova/templates/deployment.yaml
+++ b/global/supernova/templates/deployment.yaml
@@ -43,12 +43,8 @@ spec:
               value: {{ .Values.auth_scope_domain }}
             - name: AUTH_SCOPE_PROJECT
               value: {{ .Values.auth_scope_project }}
-            - name: BLACKHOLE_ENDPOINT
-              value: {{ .Values.blackhole_endpoint }}
-            - name: BLACKHOLE_API_KEY
-              value: {{ .Values.blackhole_api_key }}
-            - name: BLACKHOLE_API_SECRET
-              value: {{ .Values.blackhole_api_secret }}
+            - name: ALERTS_API_ENDPOINT
+              value: {{ .Values.alerts_api_endpoint }}
           livenessProbe:
             httpGet:
               path: /system/liveliness
